--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,25 @@
     transform: rotate(360deg);
   }
 }
+
+table {
+  border-spacing: 0;
+  border: 1px solid black;
+}
+
+tr > td:last-child {
+  border-bottom: 0;
+}
+
+th,
+td {
+  margin: 0;
+  padding: 0.5rem;
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
+}
+
+th,
+td :last-child {
+  border-right: 0;
+}
